# Cottoncandy

./: .gitignore  CMakeLists.txt  CottonCandy - 0.1.2.bat  CottonCandy - 0.1.3.bat  CottonCandy - 0.1.4.bat  CottonCandy - 0.1.5.ps1  CottonCandy - 0.1.6.ps1  CottonCandy PS - 0.0.1.ps1  CottonCandy.bat  Linux.sh  LogonCtrl+Alt+Del.bat  README.md  auditpolicy-windows10.bat  diableguestadmin-windows10.bat  enablesmartscreen-windows10.bat  nofun.bat
.github/workflows/: cmake-multi-platform.yml
Batch - Unfinished/: Autoupdate.bat  CottonCandy - 0.1.4.bat  UAC-ConsentPromptBehavior.bat  accountpolicies-windows10.bat  auditpolicy-windows10.bat  block_microsoft_logon.bat  changeuserPassword.bat  diableguestadmin-windows10.bat  enablesmartscreen-windows10.bat  killuser.bat  nofun.bat  renameguestadmin-windows10.bat
Separate Batch Files/: Autoupdate.bat  FindWifiPassword.bat  LogonCtrl+Alt+Del.bat  UAC-ConsentPromptBehavior.bat  accountpolicies-windows10.bat  auditpolicy-windows10.bat  diableguestadmin-windows10.bat  enablesmartscreen-windows10.bat  nofun.bat  renameguestadmin-windows10.bat
include/: OS_interface.hpp
include/windows/: win32_interface.hpp
src/: main.cpp
src/windows/: win32_interface.cpp
